# pra-corep-assistant

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  start.ps1  vercel.json
api/: requirements.txt
backend/: .env.example  .gitignore  __init__.py  debug_output.txt  demo_tests.py  knowledge_base.py  main.py  quick_test.py  requirements-test.txt  requirements.txt  run_demo.py  verif.txt
backend/app/: config.py  main.py
backend/app/models/: __init__.py
backend/app/schemas/: corep_schemas.py
backend/app/services/: audit_service.py  llm_service.py  llm_service_streaming.py  mock_llm_service.py  rag_service.py  validation_service.py
backend/tests/: conftest.py  test_api.py  test_rag_service.py  test_schemas.py  test_validation_service.py
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AuditLogViewer.jsx  QueryForm.jsx  ReasoningViewer.jsx  TemplateViewer.jsx  ValidationPanel.jsx
