[project]
name = "pra-corep-assistant"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "openai>=1.50.0",
    "httpx==0.27.2",
    "langchain==0.1.0",
    "langchain-openai==0.0.2",
    "langchain-community==0.0.10",
    "chromadb==0.4.22",
    "pandas==2.2.0",
    "jsonschema==4.21.0",
    "tenacity==8.2.3"
]
